--- a/main.css
+++ b/main.css
@@ -10,14 +10,15 @@
     flex-wrap: wrap;
     color: white;
     background-color: yellowgreen;
+    justify-content: center;
 }
 
 .item{
     background-color: rgb(27, 27, 1);
     font-size: 25px;
-    margin: 40px;
+    margin: 20px;
     padding: 40px;
-    text-align: center;
+    
 
     
 
